# evedb-rs

./: CLAUDE.md  Cargo.toml  Makefile  README.md
docs/: data_dictionary.md
src/: cli.rs  gitops.rs  lib.rs  main.rs  tools.rs
src/commands/: build.rs  clean.rs  clone.rs  interactive.rs  mod.rs  status.rs
src/commands/builders/: mod.rs  node.rs  signal.rs  trajectory.rs  vehicle.rs
src/db/: api.rs  evedb.rs  mod.rs  transacted.rs
src/db/ddl/: edge.rs  mod.rs  node.rs  signal.rs  trajectory.rs  vehicle.rs
src/db/ddl/sql/: create_index_edge_nodes_idx.sql  create_table_edge.sql  create_table_node.sql  create_table_traj_edge.sql  create_table_traj_node.sql  create_table_trajectory.sql  create_table_trajectory_match_error.sql
src/db/dml/: edge.rs  mod.rs  node.rs  signal.rs  trajectory.rs  vehicle.rs
src/etl/: converters.rs  mod.rs
src/etl/extract/: mod.rs  signals.rs  vehicles.rs
src/models/: config.rs  edge.rs  mod.rs  node.rs  segment.rs  signal.rs  trajectory.rs  valhalla.rs  vehicle.rs
tests/: integration_tests.rs
valhalla/rest/: map-match-1.rest
