[package]
name = "evedb"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
calamine = { version = "0.33.0", features = ["chrono"] }
anyhow = "1.0.101"
zip = "6.0.0"
text-block-macros = "0.2.0"
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
h3o = "0.9.4"
indicatif = "0.18.3"
geo = "0.32.0"
chrono = "0.4.43"
chrono-tz = "0.10.4"
valhalla-client = "0.5.0"
rayon = "1.11.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
url = "2.5.8"

[profile.release]
panic = 'abort'
#debug = true

[patch.crates-io]
valhalla-client = { path = "../valhalla-client" }
